add "--add-opens java.base/java.lang=ALL-UNNAMED" to fix tests